@startuml
'https://plantuml.com/class-diagram

class Election
class User
enum Candidate
class MainVote

MainVote --> User
User ..> Election

class User{
- String name
void vote(Candidate candidates)
}

class Election{
- {static} Election instance
- int trump: hidden
- List<String>: User
- Election()
+ {static} Election getInstance()
+ void vote(Candidate candidate, String userName)
+ void result()
}

note left of User::vote
1. Tạo một instance của Election
2. Gọi phương thức vote trên Instance để bầu chọn
end note


@enduml